<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.LoginActivity">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="@dimen/auth_header_image_height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/fl_header_image">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/content_description"
            android:scaleType="fitXY"
            android:src="@drawable/auth_screens_background"/>

        <ImageView
            android:layout_width="@dimen/auth_logo_width_size"
            android:layout_height="@dimen/auth_logo_height_size"
            android:layout_gravity="center"
            android:contentDescription="@string/content_description"
            android:scaleType="fitCenter"
            app:tint="@color/white" />

    </FrameLayout>
    <com.thunder.apps.myshoppal.utils.MSPTextViewBold
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_title"
        android:layout_marginTop="35dp"
        android:text="@string/title_login"
        android:textColor="@color/colorPrimaryText"
        android:textSize="@dimen/title_textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fl_header_image"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/MSPTextInputLayout"
        android:layout_marginStart="16dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/et_hint_email_id"
        android:textColorHint="@color/colorSecondaryText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title">

        <com.thunder.apps.myshoppal.utils.MSPEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_email"
            android:inputType="textEmailAddress"
            android:padding="@dimen/et_padding"
            android:textSize="@dimen/et_textSize"
            android:textColor="@color/colorPrimaryText"
            tools:text="abc@gmail.com"/>


    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/MSPTextInputLayout"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/et_hint_password"
        android:textColorHint="@color/colorSecondaryText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_email">

        <com.thunder.apps.myshoppal.utils.MSPEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_password"
            android:inputType="textPassword"
            android:padding="@dimen/et_padding"
            android:textSize="@dimen/et_textSize"
            android:textColor="@color/colorPrimaryText"
            tools:text="1234546"/>


    </com.google.android.material.textfield.TextInputLayout>

    <com.thunder.apps.myshoppal.utils.MSPTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_forgot_password"
        android:layout_marginEnd="16dp"
        android:foreground="?attr/selectableItemBackground"
        android:padding="@dimen/clickable_text_view_padding"
        android:text="@string/lbl_forgot_password"
        android:textSize="@dimen/forgot_password_textSize"
        android:textColor="@color/colorSecondaryText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_password"
        android:layout_marginRight="16dp"
        tools:ignore="UnusedAttribute" />

    <com.thunder.apps.myshoppal.utils.MSPButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_login"
        android:gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_background"
        android:paddingTop="@dimen/btn_padding"
        android:foreground="?attr/selectableItemBackground"
        android:paddingBottom="@dimen/btn_padding"
        android:text="@string/btn_lbl_login"
        tools:targetApi="m"
        tools:ignore="UnusedAttribute"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:textSize="@dimen/btn_textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_forgot_password"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login">

        <com.thunder.apps.myshoppal.utils.MSPTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_don_t_have_an_account"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="1.5dp"
            android:padding="@dimen/clickable_text_view_padding"
            android:text="@string/don_t_have_an_account"
            android:textColor="@color/colorSecondaryText"
            android:textSize="@dimen/lbl_text_view_textSize"/>

        <com.thunder.apps.myshoppal.utils.MSPTextViewBold
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_register"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="1.5dp"
            android:foreground="?attr/selectableItemBackground"
            android:padding="@dimen/clickable_text_view_padding"
            android:text="@string/register"
            android:textColor="@color/colorSecondaryText"
            android:textSize="@dimen/lbl_text_view_textSize"
            tools:ignore="UnusedAttribute" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>